homeworkchart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  generation: 2
  name: main
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: cluster.weblightenment.com
    http:
      paths:
      - backend:
          service:
            name: wordpress
            port:
              number: 80
        path: /
        pathType: Exact
